Avance con Semana 2 (Leccion 2)

--- a/angular-wishlist/src/app/app.component.html
+++ b/angular-wishlist/src/app/app.component.html
@@ -1,12 +1,20 @@
 <div class="container content">
+
+	<div class="page-header">
+		<div class="container">
+			<h1>Ruteo Simple</h1>
+			<div class="navLinks">
+				<a [routerLink]="['/home']">Home</a>
+				<a [routerLink]="['/destino']">Destino</a>	
+			</div>
+		</div>
+	</div>
+
 	<div class="row">
 		<h1>
 			{{title}}
 		</h1>
 	</div>
 
-	<app-lista-destinos></app-lista-destinos>
+	<router-outlet></router-outlet>
 </div>
-
-
-
