--- a/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
+++ b/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
@@ -3,32 +3,21 @@
 		<div class="col-md-6 offset-md-3">
 			<span class="anchor" id="formLogin"></span>
 
-<!-- form card login with validation feedback -->
+			<!-- form card login with validation feedback -->
 			<div class="card card-outline-secondary">
 				<div class="card-header">
 					<h3 class="mb-0">Whishlist</h3>
-			</div>
-			<div class="card-body">
-				<form>
-					<div class="form-group">
-						<label for="nombre">Nombre</label>
-						<input type="text" class="form-control" id="nombre" placeholder="Ingresar nombre..." #nombre>
-					</div>
-					<div class="form-group">
-						<label for="Imagen Url">Imagen Url</label>
-						<input type="text" class="form-control" id="imagenUrl" placeholder="Ingresar url..." #url>
-					</div>
-					<button type="submit" class="btn btn-primary" (click)="guardar(nombre.value, url.value)">Guardar!</button>
-				</form>
-			</div>
+				</div>
+				<div class="card-body">
+					<app-form-destino-viaje (onItemAdded="agregado($event)")></app-form-destino-viaje>
+				</div>
 			</div>
 		</div>
 	</div>
 
 	<hr class="mb-5">
 	<div class="row row-flex">
-		<app-destino-viaje *ngFor="let d of destinos" [destino]="d"></app-destino-viaje>
+		<app-destino-viaje *ngFor="let d of destinos; let i=index" [destino]="d" [idx]=i+1 (clicked)="elegido($event)">
+		</app-destino-viaje>
 	</div>
 </div>
-
-
