--- a/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
+++ b/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
@@ -17,7 +17,15 @@
 
 	<hr class="mb-5">
 	<div class="row row-flex">
-		<app-destino-viaje *ngFor="let d of destinos; let i=index" [destino]="d" [idx]=i+1 (clicked)="elegido($event)">
+		<app-destino-viaje *ngFor="let d of destinosApiClient.getAll(); let i=index" [destino]="d" [idx]=i (onClicked)="elegido(d)">
 		</app-destino-viaje>
+	</div>
+
+	<hr class="mb-5">
+	<div class="row row-flex">
+		<h5>Actividad</h5>
+		<ul>
+			<li *ngFor="let u of updates;">{{u}}</li>
+		</ul>
 	</div>
 </div>
