--- a/angular-wishlist/src/app/form-destino-viaje/form-destino-viaje.component.html
+++ b/angular-wishlist/src/app/form-destino-viaje/form-destino-viaje.component.html
@@ -5,6 +5,9 @@
             <label for="nombre">Nombre</label>
             <input type="text" class="form-control" id="nombre" placeholder="Ingresar nombre..."
                [formControl]="fg.controls['nombre']">
+               <ul>
+                   <li *ngFor="let r of searchResults;">{{r}}</li>
+               </ul>
                <div *ngIf="fg.controls['nombre'].hasError('required')">Nombre requerido!</div>
                <div *ngIf="fg.controls['nombre'].hasError('invalidNombre')">Nombre invalido!</div>
                <div *ngIf="fg.controls['nombre'].hasError('minLongNombre')">Nombre debe tener al menos {{minLongitud}} de largo!</div>
