integracion de SPA

--- a/angular-wishlist/src/app/destino-detalle/destino-detalle.component.html
+++ b/angular-wishlist/src/app/destino-detalle/destino-detalle.component.html
@@ -1,1 +1,6 @@
-<p>destino-detalle works!</p>
+<p>Aqui vemos el detalle de un destino de viaje!
+    <br>
+    {{ destino.id }}
+    <br>
+    {{ destino.nombre }}
+</p>
