--- a/angular-wishlist/src/app/destino-viaje/destino-viaje.component.html
+++ b/angular-wishlist/src/app/destino-viaje/destino-viaje.component.html
@@ -14,6 +14,11 @@
 				</span>
 			</li>
 		</ul>
+		<div>
+			<a href="#" (click)="voteUp()"><i class="material-icons md-18">thumb_up</i></a>
+			<a href="#" (click)="voteDown()"><i class="material-icons md-18">thumb_down</i></a>
+			{{destino.votes}}
+		</div>
 			<a href="#" class="btn-card" (click)="ir()">Ir!</a>
 			<span *ngIf="destino.isSelected()">
 				<span ngNonBindable>- {{PREFERIDO}} -</span> <!--Las llaves significaria en Angular, renderear el contenido de la variable-->
