--- a/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
+++ b/angular-wishlist/src/app/lista-destinos/lista-destinos.component.html
@@ -17,7 +17,7 @@
 
 	<hr class="mb-5">
 	<div class="row row-flex">
-		<app-destino-viaje *ngFor="let d of destinosApiClient.getAll(); let i=index" [destino]="d" [idx]=i (onClicked)="elegido(d)">
+		<app-destino-viaje *ngFor="let d of all; let i=index" [destino]="d" [idx]=i (onClicked)="elegido(d)">
 		</app-destino-viaje>
 	</div>
 
