--- a/angular-wishlist/src/app/app.component.html
+++ b/angular-wishlist/src/app/app.component.html
@@ -1,6 +1,13 @@
 <div class="container content">
-
 	<div class="page-header">
+		<div style="float: right;">
+			<select (change)="translate.use($event.target.value)">
+				<option value="es">Español</option>
+				<option value="fr">French</option>
+				<option value="en">English</option>
+			</select>
+		</div>
+
 		<div class="container">
 			<h1>Ruteo Simple</h1>
 			<div class="navLinks">
@@ -12,7 +19,7 @@
 
 	<div class="row">
 		<h1>
-			{{title}}
+			{{ title }} <b [innerHTML]="'HOLA' | translate"></b>
 		</h1>
 	</div>
 
