--- a/angular-wishlist/src/app/components/lista-destinos/lista-destinos.component.html
+++ b/angular-wishlist/src/app/components/lista-destinos/lista-destinos.component.html
@@ -17,7 +17,13 @@
 
 	<hr class="mb-5">
 	<div class="row row-flex">
-		<app-destino-viaje *ngFor="let d of all; let i=index" [destino]="d" [idx]=i (onClicked)="elegido(d)">
+		<app-destino-viaje 
+			*ngFor="let d of all; let i=index" 
+			[destino]="d" 
+			[idx]=i 
+			(onClicked)="elegido(d)" 
+			appEspiame
+			>
 		</app-destino-viaje>
 	</div>
 
