se agrego Registro de actividad de usuario

--- a/angular-wishlist/src/app/components/destino-viaje/destino-viaje.component.html
+++ b/angular-wishlist/src/app/components/destino-viaje/destino-viaje.component.html
@@ -15,11 +15,19 @@
 			</li>
 		</ul>
 		<div>
-			<a href="#" (click)="voteUp()"><i class="material-icons md-18">thumb_up</i></a>
-			<a href="#" (click)="voteDown()"><i class="material-icons md-18">thumb_down</i></a>
-			{{destino.votes}}
+			<a href="#" (click)="voteUp()" appTrackearClick data-trackear-tags='destino_vote_up lista_destinos_item'>
+				<i class="material-icons md-18">thumb_up</i>
+			</a>
+			<a href="#" (click)="voteDown()" appTrackearClick data-trackear-tags='destino_vote_down lista_destinos_item'>
+				<i class="material-icons md-18">thumb_down</i>
+			</a>
+			&nbsp;
+			Votos: {{destino.votes}}
 		</div>
-			<a href="#" class="btn-card" (click)="ir()">Ir!</a>
+			<a href="#" class="btn-card" (click)="ir()" 
+				appTrackearClick data-trackear-tags='destino_elegir_preferido lista_destinos_item'>
+				Ir!
+			</a>
 			<span *ngIf="destino.isSelected()">
 				<span ngNonBindable>- {{PREFERIDO}} -</span> <!--Las llaves significaria en Angular, renderear el contenido de la variable-->
 			</span>
